# medical_diagnostics_website

./: .env_sample  .flake8  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
med/: admin.py  forms.py  models.py  services.py  urls.py  views.py
med/migrations/: 0001_initial.py  0002_rename_speciality_doctor_services.py  0003_alter_doctor_services.py  0004_rename_diagnostic_appointment_services_and_more.py  0005_appointment_result.py  0006_delete_feedback.py  0007_remove_doctor_services_services_doctor.py  0008_services_appointments.py  0009_alter_appointment_services.py  0010_remove_services_doctor_alter_appointment_doctor_and_more.py  0011_remove_services_appointments.py
med/templates/med/: about.html  appointments_archive.html  appointments_my.html  base.html  contacts.html  index.html  making_an_appointment.html  services.html  services_form.html  user_appointments.html
med/templates/med/includes/: inc_menu.html
med/templatetags/: my_tags.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_user_is_doctor.py  0004_user_services.py  0005_alter_user_services.py  0006_alter_user_options.py  0007_alter_user_first_name_alter_user_last_name.py  0008_alter_user_services.py  0009_alter_user_services.py
users/templates/: login.html
users/templates/users/: login.html  profile.html  register.html  reset_password.html  user_form.html  verify_code.html
