[tool.poetry]
name = "medical-diagnostics-website"
version = "0.1.0"
description = ""
authors = ["Sergey Arefev"]
readme = "README.md"
packages = [{include = "medical_diagnostics_website"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
